RST-926 - Fixed issue with alignment of pound sign for money input fields. (#70)

--- a/app/assets/stylesheets/money-inputs.scss
+++ b/app/assets/stylesheets/money-inputs.scss
@@ -1,16 +1,19 @@
 .form-group {
   .form-control-money {
     position: relative;
-    input.form-control[type=text] {
-      padding-left: 1.2em;
+    input.form-control.money[type=text] {
+      padding-left: 1.5em;
     }
-  }
-  .form-control-money.gbp::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "£";
-    margin: 0.5em 0.5em;
-
+    .currency {
+      width: 1em;
+      padding-left: 0px;
+      padding-right: 0px;
+      border-left: none;
+      border-right: none;
+      position: absolute;
+      left: 0.5em;
+      background-color: white;
+      color: black;
+    }
   }
 }
